welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:9: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
	if (nums.length < 4) return nums.length;
        ^